--- a/nrf7002-memfault-example-main/prj.conf
+++ b/nrf7002-memfault-example-main/prj.conf
@@ -27,11 +27,13 @@ CONFIG_DK_LIBRARY=y
 
 # Memfault
 CONFIG_MEMFAULT=y
-CONFIG_MEMFAULT_NCS_PROJECT_KEY=""
+CONFIG_MEMFAULT_NCS_PROJECT_KEY="your-project-key-here"
 CONFIG_MEMFAULT_SHELL=y
 CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
 CONFIG_MEMFAULT_LOGGING_ENABLE=y
 CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
+CONFIG_MEMFAULT_NCS_FW_VERSION="1.0.0"
+CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
 
 # Add to pick up support for sending Memfault data over HTTP
 CONFIG_MEMFAULT_HTTP_ENABLE=y
@@ -50,14 +52,57 @@ CONFIG_STREAM_FLASH=y
 
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=8192
-CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=3072
 CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=1024
 CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
 
 # Print download progress to console
 CONFIG_FOTA_DOWNLOAD_PROGRESS_EVT=y
+CONFIG_MEMFAULT_FOTA_CLI_CMD=y
+CONFIG_MEMFAULT_FOTA=y
+CONFIG_DOWNLOAD_CLIENT=y
+CONFIG_FOTA_DOWNLOAD=y
+
+# Flash prerequisites
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+
+# Stream flash (required by DFU_TARGET_STREAM)
+CONFIG_STREAM_FLASH=y
+CONFIG_STREAM_FLASH_ERASE=y
+
+# --- Image management / bootloader so updates can apply ---
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_IMG_MANAGER=y
+CONFIG_DFU_TARGET=y
+CONFIG_DFU_TARGET_MCUBOOT=y
+
+# --- Sockets & TLS (needed if you fetch over HTTPS) ---
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+CONFIG_MBEDTLS=y
+
+# Download client sizing for Memfault FOTA
+CONFIG_DOWNLOAD_CLIENT_MAX_FILENAME_SIZE=512   
+CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096        
+
 
 # Enable network layer statistics
 CONFIG_NET_STATISTICS=y
 CONFIG_NET_STATISTICS_USER_API=y
+
+
+# for debugging only
+# --- Find the overflowing thread ---
+CONFIG_ASSERT=y
+CONFIG_STACK_SENTINEL=y
+CONFIG_INIT_STACKS=y
+CONFIG_THREAD_NAME=y
+CONFIG_THREAD_STACK_INFO=y
+
+# Zephyr shell helpers
+CONFIG_THREAD_ANALYZER=y
+CONFIG_THREAD_ANALYZER_AUTO=y
+CONFIG_THREAD_ANALYZER_USE_PRINTK=y
+CONFIG_KERNEL_SHELL=y
