Update project dependencies and add build log
- Added a new file `update_log.txt` to document the build process and output for the nrf7002-memfault-example-main project.
- Updated `west.yml` to change the SDK and Memfault firmware SDK versions:
  - Changed `sdk-nrf` revision from `v2.6.1` to `v3.0.2`.
  - Changed `memfault-firmware-sdk` revision from `1.9.0` to `1.30.3`.

--- a/nrf7002-memfault-example-main/prj.conf
+++ b/nrf7002-memfault-example-main/prj.conf
@@ -34,6 +34,10 @@ CONFIG_MEMFAULT_LOGGING_ENABLE=y
 CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
 CONFIG_MEMFAULT_NCS_FW_VERSION="1.0.0"
 CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
+# Memfault required identifiers
+CONFIG_MEMFAULT_NCS_FW_TYPE="app"               # or "app-fw", any non-empty string
+CONFIG_MEMFAULT_NCS_DEVICE_ID="nrf7002dk-navjot"  # any unique per-device string
+
 
 # Add to pick up support for sending Memfault data over HTTP
 CONFIG_MEMFAULT_HTTP_ENABLE=y
@@ -61,8 +65,15 @@ CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
 CONFIG_FOTA_DOWNLOAD_PROGRESS_EVT=y
 CONFIG_MEMFAULT_FOTA_CLI_CMD=y
 CONFIG_MEMFAULT_FOTA=y
+# Old API (let’s turn it off so it doesn’t fight with DOWNLOADER)
 CONFIG_DOWNLOAD_CLIENT=y
+
+# New downloader API for Memfault
+CONFIG_DOWNLOADER=y
+# CONFIG_DOWNLOADER_STACK_SIZE=2048        
+# CONFIG_DOWNLOADER_MAX_FILENAME_SIZE=400  
 CONFIG_FOTA_DOWNLOAD=y
+CONFIG_DOWNLOADER=y
 
 # Flash prerequisites
 CONFIG_FLASH=y
@@ -85,7 +96,7 @@ CONFIG_MBEDTLS=y
 
 # Download client sizing for Memfault FOTA
 CONFIG_DOWNLOAD_CLIENT_MAX_FILENAME_SIZE=512   
-CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096        
+CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=2048        
 
 
 # Enable network layer statistics
